<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Activities.RegisterActivity">


    <EditText
        android:id="@+id/regId"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="8dp"

        android:background="@drawable/reg_edittext_style"
        android:ems="10"
        android:hint="@string/id_number"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/regName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regUserPhoto" />

    <ImageView
        android:id="@+id/regUserPhoto"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:src="@drawable/userphoto"
        app:layout_constraintBottom_toTopOf="@+id/regId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="100dp" />

    <EditText
        android:id="@+id/regName"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"

        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/reg_edittext_style"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/regMail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regId" />

    <EditText
        android:id="@+id/regMail"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/reg_edittext_style"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/regPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regName" />

    <EditText
        android:id="@+id/regPassword"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/reg_edittext_style"
        android:ems="10"
        android:hint="@string/pin"

        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/regPassword2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regMail" />

    <EditText
        android:id="@+id/regAuthPassword"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"

        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:background="@drawable/reg_edittext_style"
        android:ems="10"
        android:hint="@string/auth_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/regAuthPassword2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regPassword2" />

    <EditText
        android:id="@+id/regAuthPassword2"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/reg_edittext_style"

        android:ems="10"
        android:hint="@string/confirm_auth_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regAuthPassword" />

    <EditText
        android:id="@+id/regPassword2"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/reg_edittext_style"
        android:ems="10"
        android:hint="@string/confirm_pin"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/regAuthPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regPassword" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/regBtn"
        app:layout_constraintEnd_toEndOf="@+id/regBtn"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="@+id/regBtn"
        app:layout_constraintTop_toTopOf="@+id/regBtn"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/regBtn"
        android:layout_width="112dp"
        android:layout_height="52dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/reg_btn_style"
        android:text="@string/register"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regAuthPassword2" />

</android.support.constraint.ConstraintLayout>